prevent file picker from resizing too much

--- a/Duplicati/Server/webroot/ngax/styles/styles2.css
+++ b/Duplicati/Server/webroot/ngax/styles/styles2.css
@@ -550,6 +550,7 @@ ul.notification {
 
 .resizable {
   margin-bottom: 6px;
+  max-width: 100%;
 }
 
 .advanced-toggle {
